--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: ruby
+cache: bundler
+
 rvm:
   - 2.2.2
+
+install:
+  - bundle exec asciidoctor-pdf-cjk-kai_gen_gothic-install
+
+script:
+  - bundle exec asciidoctor-pdf -r asciidoctor-pdf-cjk-kai_gen_gothic -a pdf-style=KaiGenGothicCN example.asc
