--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
   - 2.2.2
 
 install:
+  - bundle install --jobs=3 --retry=3
   - bundle exec asciidoctor-pdf-cjk-kai_gen_gothic-install
 
 script:
