--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 
 install:
   - bundle install --jobs=3 --retry=3
-  - bundle exec asciidoctor-pdf-cjk-kai_gen_gothic-install
+  - asciidoctor-pdf-cjk-kai_gen_gothic-install
 
 script:
   - bundle exec asciidoctor-pdf -r asciidoctor-pdf-cjk-kai_gen_gothic -a pdf-style=KaiGenGothicCN example.asc
