--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ cache: bundler
 rvm:
   - 2.2.2
 
-install:
-  - bundle install --jobs=3 --retry=3
+--install:
+  - bundle install --path=vendor/ --jobs=3 --retry=3
   - asciidoctor-pdf-cjk-kai_gen_gothic-install
 
 script:
