--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ rvm:
 
 --install:
   - bundle install --path=vendor/ --jobs=3 --retry=3
-  - asciidoctor-pdf-cjk-kai_gen_gothic-install
+
+before_script:
+  - bundle exec asciidoctor-pdf-cjk-kai_gen_gothic-install
 
 script:
-  - bundle exec asciidoctor-pdf -r asciidoctor-pdf-cjk-kai_gen_gothic -a pdf-style=KaiGenGothicCN example.asc
+  - bundle exec asciidoctor-pdf -r asciidoctor-pdf-cjk-kai_gen_gothic -a pdf-style=KaiGenGothicCN example/example.asc
